notes
seperated build sting away from transmit, 
failes to compile
INFO ESPHome 2025.7.5
INFO Reading configuration c:\esphomechlorinenew\cc1101iris.yaml...
INFO Generating C++ source...
INFO Compiling app...
Processing cc1101iris (board: esp32-c3-devkitm-1; framework: espidf; platform: https://github.com/pioarduino/platform-espressif32/releases/download/53.03.13/platform-espressif32.zip)
--------------------------------------------------------------------------------
HARDWARE: ESP32C3 160MHz, 320KB RAM, 4MB Flash
 - framework-espidf @ 3.50302.0 (5.3.2) 
 - tool-cmake @ 3.30.2 
 - tool-esptoolpy @ 4.8.6 
 - tool-mklittlefs @ 3.2.0 
 - tool-ninja @ 1.9.0 
 - tool-riscv32-esp-elf-gdb @ 14.2.0+20240403 
 - tool-xtensa-esp-elf-gdb @ 14.2.0+20240403 
 - toolchain-esp32ulp @ 2.35.0-20220830 
 - toolchain-riscv32-esp @ 13.2.0+20240530
Reading CMake configuration...
Dependency Graph
|-- noise-c @ 0.1.10
|-- ArduinoJson @ 7.4.2
Compiling .pioenvs\cc1101iris\src\esphome\components\iris\iris.cpp.o
Compiling .pioenvs\cc1101iris\src\main.cpp.o
src/esphome/components/iris/iris.cpp: In function 'std::vector<int> esphome::iris::build_frame(uint16_t, IrisCommand, IrisMode)':
src/esphome/components/iris/iris.cpp:52:24: error: aggregate 'std::ostringstream oss' has incomplete type and cannot be defined
   52 |     std::ostringstream oss;
      |                        ^~~
src/esphome/components/iris/iris.cpp:82:24: error: aggregate 'std::ostringstream voss' has incomplete type and cannot be defined
   82 |     std::ostringstream voss;
      |                        ^~~~
*** [.pioenvs\cc1101iris\src\esphome\components\iris\iris.cpp.o] Error 1
========================= [FAILED] Took 10.49 seconds =========================
